fixing dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 @custom-variant dark (&:where(.dark, .dark *));
+
+@theme {
+  /* Typography */
+
+  --font-noto: "Noto Sans", sans-serif;
+
+  /* Neutral */
+  --color-blue-900: hsl(227, 75%, 14%);
+  --color-gray-800: hsl(226, 25%, 17%);
+  --color-gray-700: hsl(225, 23%, 24%);
+  --color-gray-600: hsl(226, 11%, 37%);
+  --color-gray-300: hsl(226, 11%, 37%);
+  --color-gray-200: hsl(217, 61%, 90%);
+  --color-gray-100: hsl(0, 0%, 93%);
+  --color-gray-50: hsl(200, 60%, 99%);
+
+  /* Red */
+  --color-red-700: hsl(3, 77%, 44%);
+  --color-red-500: hsl(3, 71%, 56%);
+  --color-red-400: hsl(3, 86%, 64%);
+
+  /* --color-light-gradient: linear-gradient(180deg, #040918 0%, #091540 100%) */
+  --color-custom-gradient: linear-gradient(180deg, #040918 0%, #091540 100%);
+}
+
+@utility dark-gradient {
+  @apply bg-gradient-to-b from-[#040918] from-0% to-[#091540] to-100%;
+}
+
+@utility light-gradient {
+  @apply bg-gradient-to-b from-[#EBF2FC] from-0% to-[#EEF8F9] to-100%;
+}
